--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-      <link href="C:\Users\Dana\test\excursion\resources\css\style.css" type="text/css" rel="stylesheet">
-        <title>Hello World</title>
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
-    <h1>Discover Hidden Places in the World Around You</h1>
-      <h2><a href="https://ipmj4de2dg8kdvds2db112alp5hdv42iolt3aad3dggevoujr6tg.cc-propeller.cloud/" target="_blank">Download excursion (coming soon!)<alt="Excursion download link"></h2>
+
+    <!-- Landing section -->
+
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="C:\Users\Dana\test\excursion\resources\video\excursion.mp4" type="video/mp4">
+    </video>
+
+    <!-- Information Section -->
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+
+    <!-- Coming Soon Section -->
+
+    <p><img class="app" src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- Footer -->
+
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
+
   </body>
 </html>
